<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_15"
    android:layout_marginRight="@dimen/margin_15"
    android:background="@drawable/background_radius"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:fontFamily="@font/montserrat_bold"
        android:padding="5dp"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/old_Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@drawable/form_outline_background"
                android:hint="@string/old_pwd"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="@dimen/margin_10"
                android:textColor="@color/white"
                android:textColorHint="@color/background_white"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/input_Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@drawable/form_outline_background"
                android:hint="@string/new_pwd"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="@dimen/margin_10"
                android:textColor="@color/white"
                android:textColorHint="@color/background_white"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/input_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="@dimen/margin_20"
                android:background="@drawable/form_outline_background"
                android:hint="@string/confirm_new_pwd"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="@dimen/margin_10"
                android:textColor="@color/white"
                android:textColorHint="@color/background_white"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15"
            android:background="@drawable/brown_button_background"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>